syntax = "proto3";
package mapeo;

message Ref_1 {
  bytes docId = 1;
  bytes versionId = 2;
  RefType type = 3;
  enum RefType {
    type_unspecified = 0;
    observation = 1;
    field = 2;
    preset = 3;
    icon = 4;
  }
}
